--- a/camsrv/web_resources/templates/f9wfs.html
+++ b/camsrv/web_resources/templates/f9wfs.html
@@ -90,13 +90,13 @@
             <div class='col align-self-left'>
                 <div class="form-inline">
                     <label for="frame_x">Lower X (<div id="cframe_x"></div>):</label>
-                    <input class="form-control form-control-sm" type="number" min=0 max={{ args['ccdinfo']['CCD_MAX_X'] }} step=1 value={{ args['frame']['X'] }} id="frame_x">
+                    <input class="form-control form-control-sm" type="number" min=0 max={{ args['ccdinfo']['CCD_MAX_X'] }} step=1 value={{ int(args['frame']['X']) }} id="frame_x">
                     <label for="frame_y">Lower Y (<div id="cframe_y"></div>):</label>
-                    <input class="form-control form-control-sm" type="number" min=0 max={{ args['ccdinfo']['CCD_MAX_Y'] }} step=1 value={{ args['frame']['Y'] }} id="frame_y">
+                    <input class="form-control form-control-sm" type="number" min=0 max={{ args['ccdinfo']['CCD_MAX_Y'] }} step=1 value={{ int(args['frame']['Y']) }} id="frame_y">
                     <label for="frame_w">Width (<div id="cframe_w"></div>):</label>
-                    <input class="form-control form-control-sm" type="number" min=0 max={{ args['ccdinfo']['CCD_MAX_X'] }} step=1 value={{ args['frame']['width'] }} id="frame_w">
+                    <input class="form-control form-control-sm" type="number" min=0 max={{ args['ccdinfo']['CCD_MAX_X'] }} step=1 value={{ int(args['frame']['width']) }} id="frame_w">
                     <label for="frame_h">Height (<div id="cframe_h"></div>):</label>
-                    <input class="form-control form-control-sm" type="number" min=0 max={{ args['ccdinfo']['CCD_MAX_Y'] }} step=1 value={{ args['frame']['height'] }} id="frame_h">
+                    <input class="form-control form-control-sm" type="number" min=0 max={{ args['ccdinfo']['CCD_MAX_Y'] }} step=1 value={{ int(args['frame']['height']) }} id="frame_h">
                 </div>
             </div>
         </div>
@@ -104,9 +104,9 @@
             <div class='col align-self-left'>
                 <div class="form-inline">
                     <label for="x_bin">X binning (<div id="cx_bin"></div>):</label>
-                    <input class="form-control form-control-sm" type="number" min=1 max=20 step=1 value={{ args['binning']['X'] }} id="x_bin">
+                    <input class="form-control form-control-sm" type="number" min=1 max=20 step=1 value={{ int(args['binning']['X']) }} id="x_bin">
                     <label for="y_bin">Y binning (<div id="cy_bin"></div>):</label>
-                    <input class="form-control form-control-sm" type="number" min=1 max=20 step=1 value={{ args['binning']['Y'] }} id="y_bin">
+                    <input class="form-control form-control-sm" type="number" min=1 max=20 step=1 value={{ int(args['binning']['Y']) }} id="y_bin">
                     <button type="button" id="confccd" class="btn btn-primary btn-sm">Configure CCD</button>
                     {% if args['status'] %}
                         <button type="button" id="connect" class="btn btn-success btn-sm">Reconnect</button>
