tweak formatting of f9wfs page

--- a/camsrv/web_resources/templates/f9wfs.html
+++ b/camsrv/web_resources/templates/f9wfs.html
@@ -39,7 +39,7 @@
     </style>
     <title>F/9 Wavefront Sensor Camera Interface</title>
 <body>
-    <div class="page-header" align="center">
+    <div class="page-header">
         <h1 class="display-4">F/9 Wavefront Sensor Camera Interface</h1>
     </div>
 
@@ -118,8 +118,10 @@
         </div>
         <div class="row justify-content-left">
             <div class='col align-self-left'>
-                <button type="button" id="confwfs" class="btn btn-primary btn-sm">Configure for WFS</button>
-                <button type="button" id="confdefault" class="btn btn-primary btn-sm">Default Configuration</button>
+                <div class="form-inline">
+                    <button type="button" id="confwfs" class="btn btn-primary btn-sm">Configure for WFS</button>
+                    <button type="button" id="confdefault" class="btn btn-primary btn-sm">Default Configuration</button>
+                </div>
             </div>
         </div>
         <div class="row justify-content-left">
