--- a/camsrv/web_resources/templates/f9wfs.html
+++ b/camsrv/web_resources/templates/f9wfs.html
@@ -71,7 +71,7 @@
                     <input class="form-control form-control-sm" type="number" min=1 max=20 step=1 value={{ int(args['binning']['X']) }} id="x_bin">
                     <label for="y_bin">Y binning (<div id="cy_bin"></div>):</label>
                     <input class="form-control form-control-sm" type="number" min=1 max=20 step=1 value={{ int(args['binning']['Y']) }} id="y_bin">
-                    <button type="button" id="confccd" class="btn btn-primary btn-sm">Configure CCD</button>
+                    <button type="button" id="confccd" class="btn btn-primary btn-sm">Configure Readout</button>
                 </div>
             </div>
         </div>
@@ -81,9 +81,9 @@
                     <button type="button" id="confwfs" class="btn btn-primary btn-sm">Configure for WFS</button>
                     <button type="button" id="confdefault" class="btn btn-primary btn-sm">Default Configuration</button>
                     {% if args['status'] %}
-                        <button type="button" id="connect" class="btn btn-success btn-sm">Reconnect</button>
+                        <button type="button" id="connect" class="btn btn-success btn-sm">Connected</button>
                     {% else %}
-                        <button type="button" id="connect" class="btn btn-danger btn-sm">Reconnect</button>
+                        <button type="button" id="connect" class="btn btn-danger btn-sm">NOT Connected</button>
                     {% end %}
                 </div>
             </div>
@@ -192,7 +192,6 @@
                 var url = "temperature?temp=" + temp;
                 $.get(url, function(data, status) {
                     var logstuff = data + status;
-                    $('#settemp').val(temp);
                     enable();
                 });
             });
@@ -227,11 +226,7 @@
                 });
             });
             $('#connect').on('click', function(){
-                disable();
-                $.get("reset", function(data, status) {
-                    var logstuff = data + status;
-                    enable();
-                });
+                alert("Run 'mmtserv f9wfs restart' from terminal to reset camera connection");
             });
 
             (function update() {
@@ -247,9 +242,11 @@
                         if (data['status'] == true) {
                             $("#connect").removeClass("btn-danger");
                             $("#connect").addClass("btn-success");
+                            $("#connect").text("Connected");
                         } else {
                             $("#connect").removeClass("btn-success");
                             $("#connect").addClass("btn-danger");
+                            $("#connect").text("NOT Connected");
                         };
                         $('#cframe_x').html(data['frame']['X']);
                         $('#cframe_y').html(data['frame']['Y']);
