--- a/camsrv/web_resources/templates/f9wfs.html
+++ b/camsrv/web_resources/templates/f9wfs.html
@@ -44,50 +44,64 @@
     </div>
 
     <div class="container">
-        <div class="row justify-content-left">
-            <div class='col align-self-left'>
-                <div class="form-inline">
-                    <label for="frame_x">Lower X (<div id="cframe_x"></div>):</label>
-                    <input class="form-control form-control-sm" type="number" min=0 max={{ args['ccdinfo']['CCD_MAX_X'] }} step=1 value={{ int(args['frame']['X']) }} id="frame_x">
-                    <label for="frame_y">Lower Y (<div id="cframe_y"></div>):</label>
-                    <input class="form-control form-control-sm" type="number" min=0 max={{ args['ccdinfo']['CCD_MAX_Y'] }} step=1 value={{ int(args['frame']['Y']) }} id="frame_y">
+        <div id="accordion" role="tablist">
+            <div class="card">
+                <div class="class-header" role="tab" id="eng_heading">
+                    <h5 class="mb-0">
+                        <a data-toggle="collapse" href="#collapse_reg" aria-expanded="true" aria-controls="collapse_reg">
+                            Engineering Interface
+                        </a>
+                    </h5>
+                </div>
+                <div id="collapse_reg" class="collapse show" role="tabpanel" aria-labelledby="eng_heading" data-parent="#accordion">
+                    <div class="card-body">
+                        <div class="row justify-content-left">
+                            <div class='col align-self-left'>
+                                <div class="form-inline">
+                                    <label for="frame_x">Lower X (<div id="cframe_x"></div>):</label>
+                                    <input class="form-control form-control-sm" type="number" min=0 max={{ args['ccdinfo']['CCD_MAX_X'] }} step=1 value={{ int(args['frame']['X']) }} id="frame_x">
+                                    <label for="frame_y">Lower Y (<div id="cframe_y"></div>):</label>
+                                    <input class="form-control form-control-sm" type="number" min=0 max={{ args['ccdinfo']['CCD_MAX_Y'] }} step=1 value={{ int(args['frame']['Y']) }} id="frame_y">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row justify-content-left">
+                            <div class='col align-self-left'>
+                                <div class="form-inline">
+                                    <label for="frame_w">Width (<div id="cframe_w"></div>):</label>
+                                    <input class="form-control form-control-sm" type="number" min=0 max={{ args['ccdinfo']['CCD_MAX_X'] }} step=1 value={{ int(args['frame']['width']) }} id="frame_w">
+                                    <label for="frame_h">Height (<div id="cframe_h"></div>):</label>
+                                    <input class="form-control form-control-sm" type="number" min=0 max={{ args['ccdinfo']['CCD_MAX_Y'] }} step=1 value={{ int(args['frame']['height']) }} id="frame_h">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row justify-content-left">
+                            <div class='col align-self-left'>
+                                <div class="form-inline">
+                                    <label for="x_bin">X binning (<div id="cx_bin"></div>):</label>
+                                    <input class="form-control form-control-sm" type="number" min=1 max=20 step=1 value={{ int(args['binning']['X']) }} id="x_bin">
+                                    <label for="y_bin">Y binning (<div id="cy_bin"></div>):</label>
+                                    <input class="form-control form-control-sm" type="number" min=1 max=20 step=1 value={{ int(args['binning']['Y']) }} id="y_bin">
+                                    <button type="button" id="confccd" class="btn btn-primary btn-sm">Configure Readout</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row justify-content-left">
+                            <div class='col align-self-left'>
+                                <div class="form-inline">
+                                    <button type="button" id="confwfs" class="btn btn-primary btn-sm">Configure for WFS</button>
+                                    <button type="button" id="confdefault" class="btn btn-primary btn-sm">Default Configuration</button>
+                                    {% if args['status'] %}
+                                        <button type="button" id="connect" class="btn btn-success btn-sm">Connected</button>
+                                    {% else %}
+                                        <button type="button" id="connect" class="btn btn-danger btn-sm">NOT Connected</button>
+                                    {% end %}
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="row justify-content-left">
-            <div class='col align-self-left'>
-                <div class="form-inline">
-                    <label for="frame_w">Width (<div id="cframe_w"></div>):</label>
-                    <input class="form-control form-control-sm" type="number" min=0 max={{ args['ccdinfo']['CCD_MAX_X'] }} step=1 value={{ int(args['frame']['width']) }} id="frame_w">
-                    <label for="frame_h">Height (<div id="cframe_h"></div>):</label>
-                    <input class="form-control form-control-sm" type="number" min=0 max={{ args['ccdinfo']['CCD_MAX_Y'] }} step=1 value={{ int(args['frame']['height']) }} id="frame_h">
-                </div>
-            </div>
-        </div>
-        <div class="row justify-content-left">
-            <div class='col align-self-left'>
-                <div class="form-inline">
-                    <label for="x_bin">X binning (<div id="cx_bin"></div>):</label>
-                    <input class="form-control form-control-sm" type="number" min=1 max=20 step=1 value={{ int(args['binning']['X']) }} id="x_bin">
-                    <label for="y_bin">Y binning (<div id="cy_bin"></div>):</label>
-                    <input class="form-control form-control-sm" type="number" min=1 max=20 step=1 value={{ int(args['binning']['Y']) }} id="y_bin">
-                    <button type="button" id="confccd" class="btn btn-primary btn-sm">Configure Readout</button>
-                </div>
-            </div>
-        </div>
-        <div class="row justify-content-left">
-            <div class='col align-self-left'>
-                <div class="form-inline">
-                    <button type="button" id="confwfs" class="btn btn-primary btn-sm">Configure for WFS</button>
-                    <button type="button" id="confdefault" class="btn btn-primary btn-sm">Default Configuration</button>
-                    {% if args['status'] %}
-                        <button type="button" id="connect" class="btn btn-success btn-sm">Connected</button>
-                    {% else %}
-                        <button type="button" id="connect" class="btn btn-danger btn-sm">NOT Connected</button>
-                    {% end %}
-                </div>
-            </div>
-        </div>
         <div class="row justify-content-left">
             <div class='col align-self-left'>
                 <form class="form-inline">
