hide engineering interface by default

--- a/camsrv/web_resources/templates/f9wfs.html
+++ b/camsrv/web_resources/templates/f9wfs.html
@@ -48,12 +48,12 @@
             <div class="card">
                 <div class="class-header" role="tab" id="eng_heading">
                     <h5 class="mb-0">
-                        <a data-toggle="collapse" href="#collapse_reg" aria-expanded="true" aria-controls="collapse_reg">
+                        <a class="collapsed" data-toggle="collapse" href="#collapse_reg" aria-expanded="false" aria-controls="collapse_reg">
                             Engineering Interface
                         </a>
                     </h5>
                 </div>
-                <div id="collapse_reg" class="collapse show" role="tabpanel" aria-labelledby="eng_heading" data-parent="#accordion">
+                <div id="collapse_reg" class="collapse" role="tabpanel" aria-labelledby="eng_heading" data-parent="#accordion">
                     <div class="card-body">
                         <div class="row justify-content-left">
                             <div class='col align-self-left'>
