fix card-header typo

--- a/camsrv/web_resources/templates/f9wfs.html
+++ b/camsrv/web_resources/templates/f9wfs.html
@@ -46,7 +46,7 @@
     <div class="container">
         <div id="accordion" role="tablist">
             <div class="card">
-                <div class="class-header" role="tab" id="eng_heading">
+                <div class="card-header" role="tab" id="eng_heading">
                     <h5 class="mb-0">
                         <a class="collapsed" data-toggle="collapse" href="#collapse_reg" aria-expanded="false" aria-controls="collapse_reg">
                             Engineering Interface
