--- a/camsrv/web_resources/templates/f9wfs.html
+++ b/camsrv/web_resources/templates/f9wfs.html
@@ -149,6 +149,8 @@
                     <button type="button" id="expose" class="btn btn-primary">Expose</button>
                 </form>
             </div>
+        </div>
+        <div class="row">
             <div class="progress" style="height: 20px;">
                 <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
                 </div>
