--- a/camsrv/web_resources/templates/f9wfs.html
+++ b/camsrv/web_resources/templates/f9wfs.html
@@ -151,8 +151,10 @@
             </div>
         </div>
         <div class="row">
-            <div class="progress" style="height: 20px;">
-                <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+            <div class='col-10'>
+                <div class="progress" style="height: 20px;">
+                    <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+                    </div>
                 </div>
             </div>
         </div>
@@ -205,7 +207,7 @@
                 function updateProgress() {
                     if (i > 0) {
                         percent = (exp - i) / exp
-                        $(".progress-bar").css("width", percent + "%").text(percent + " %");
+                        $(".progress-bar").css("width", percent.toString() + "%").text(percent.toString() + " %");
                         i = i - 0.1;
                         setTimeout("updateProgress()", 100);
                     } else {
