--- a/camsrv/web_resources/templates/f9wfs.html
+++ b/camsrv/web_resources/templates/f9wfs.html
@@ -153,7 +153,7 @@
         <div class="row">
             <div class='col-10'>
                 <div class="progress" style="height: 20px;">
-                    <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+                    <div id="progress" class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
                     </div>
                 </div>
             </div>
@@ -199,20 +199,20 @@
                             JS9.SetColormap(cmap['colormap'], cmap['contrast'], cmap['bias']);
                         };
                     }});
-                    $(".progress-bar").css("width", "0%").text("");
-                    $(".progress-bar").removeClass("progress-bar-striped progress-bar-animated");
+                    $("#progress").css("width", "0%").text("");
+                    $("#progress").removeClass("progress-bar-striped progress-bar-animated");
                 });
                 var i = parseFloat(exptime);
                 var exp = parseFloat(exptime);
                 function updateProgress() {
                     if (i > 0) {
                         percent = (exp - i) / exp
-                        $(".progress-bar").css("width", percent.toString() + "%").text(percent.toString() + " %");
+                        $("#progress").css("width", percent.toString() + "%").text(percent.toString() + " %");
                         i = i - 0.1;
                         setTimeout("updateProgress()", 100);
                     } else {
-                        $(".progress-bar").css("width", "100%").text("Reading Out...");
-                        $(".progress-bar").addClass("progress-bar-striped progress-bar-animated");
+                        $("#progress").css("width", "100%").text("Reading Out...");
+                        $("#progress").addClass("progress-bar-striped progress-bar-animated");
                     }
                 }
                 updateProgress();
