--- a/camsrv/web_resources/templates/f9wfs.html
+++ b/camsrv/web_resources/templates/f9wfs.html
@@ -147,6 +147,10 @@
                         <input class="form-control form-control-sm" type="number" min=0.0 max=3600.0 step=1.0 value=10.0 id="exptime">
                     </div>
                     <button type="button" id="expose" class="btn btn-primary">Expose</button>
+                    <label class="form-check-label">
+                        Continuous:
+                        <input id="continous" type="checkbox" class="form-check-input">
+                    </label>
                 </form>
             </div>
         </div>
