--- a/camsrv/web_resources/templates/f9wfs.html
+++ b/camsrv/web_resources/templates/f9wfs.html
@@ -109,13 +109,14 @@
             <div class='col align-self-left'>
                 <form class="form-inline">
                     <div class="form-group">
-                        <label class="form-check-label">
-                            Enable Cooling:
+                        <label class="form-check-label"><label class="custom-control custom-checkbox">
                             {% if args['cooling'] == "On" %}
-                                <input id="cooling" type="checkbox" class="form-check-input" checked>
+                                <input id="cooling" type="checkbox" class="custom-control-input" checked>
                             {% else %}
-                                <input id="cooling" type="checkbox" class="form-check-input">
+                                <input id="cooling" type="checkbox" class="custom-control-input">
                             {% end %}
+                            <span class="custom-control-indicator"></span>
+                            <span class="custom-control-description">Enable Cooling</span>
                         </label>
                         <label for="settemp">Set Temp (˚C):</label>
                         <input class="form-control form-control-sm" type="number" min=-30.0 max=30.0 step=0.1 value={{ args['requested_temp'] }} id="settemp">
@@ -149,9 +150,10 @@
                         <label for="exptime">Exposure Time (sec):</label>
                         <input class="form-control form-control-sm" type="number" min=0.0 max=3600.0 step=1.0 value=10.0 id="exptime">
                         <button type="button" id="expose" class="btn btn-primary">Expose</button>
-                        <label class="form-check-label">
-                            Continuous:
-                            <input id="continous" type="checkbox" class="form-check-input">
+                        <label class="form-check-label"><label class="custom-control custom-checkbox">
+                            <input id="continuous" type="checkbox" class="custom-control-input">
+                            <span class="custom-control-indicator"></span>
+                            <span class="custom-control-description">Continuous Exposure Loop</span>
                         </label>
                     </div>
                 </form>
