--- a/camsrv/web_resources/templates/f9wfs.html
+++ b/camsrv/web_resources/templates/f9wfs.html
@@ -58,42 +58,68 @@
                 </div>
                 <div id="collapse_reg" class="collapse" role="tabpanel" aria-labelledby="eng_heading" data-parent="#accordion">
                     <div class="card-body">
-                        <div class="row justify-content-left">
-                            <div class='col align-self-left'>
-                                <div class="form-inline">
-                                    <label for="frame_x">Lower X (<div id="cframe_x"></div>):</label>
-                                    <input class="form-control form-control-sm" type="number" min=0 max={{ args['ccdinfo']['CCD_MAX_X'] }} step=1 value={{ int(args['frame']['X']) }} id="frame_x">
-                                    <label for="frame_y">Lower Y (<div id="cframe_y"></div>):</label>
-                                    <input class="form-control form-control-sm" type="number" min=0 max={{ args['ccdinfo']['CCD_MAX_Y'] }} step=1 value={{ int(args['frame']['Y']) }} id="frame_y">
+                        <form>
+                            <div class="form-row">
+                                <div class='form-group col-md-3'>
+                                    <label for="frame_x">Lower X:</label>
+                                    <div class="input-group input-group-sm">
+                                        <span class="input-group-addon" id="cframe_x">N/A</span>
+                                        <input class="form-control form-control-sm" type="number" min=0 max={{ args['ccdinfo']['CCD_MAX_X'] }} step=1 value={{ int(args['frame']['X']) }} id="frame_x" aria-describedby="cframe_x">
+                                    </div>
+                                </div>
+                                <div class='form-group col-md-3'>
+                                    <label for="frame_y">Lower Y:</label>
+                                    <div class="input-group input-group-sm">
+                                        <span class="input-group-addon" id="cframe_y">N/A</span>
+                                        <input class="form-control form-control-sm" type="number" min=0 max={{ args['ccdinfo']['CCD_MAX_Y'] }} step=1 value={{ int(args['frame']['Y']) }} id="frame_y" aria-describedby="cframe_y">
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="row justify-content-left">
-                            <div class='col align-self-left'>
-                                <div class="form-inline">
-                                    <label for="frame_w">Width (<div id="cframe_w"></div>):</label>
-                                    <input class="form-control form-control-sm" type="number" min=0 max={{ args['ccdinfo']['CCD_MAX_X'] }} step=1 value={{ int(args['frame']['width']) }} id="frame_w">
-                                    <label for="frame_h">Height (<div id="cframe_h"></div>):</label>
-                                    <input class="form-control form-control-sm" type="number" min=0 max={{ args['ccdinfo']['CCD_MAX_Y'] }} step=1 value={{ int(args['frame']['height']) }} id="frame_h">
+                            <div class="form-row">
+                                <div class='form-group col-md-3'>
+                                    <label for="frame_w">Width:</label>
+                                    <div class="input-group input-group-sm">
+                                        <span class="input-group-addon" id="cframe_w">N/A</span>
+                                        <input class="form-control form-control-sm" type="number" min=0 max={{ args['ccdinfo']['CCD_MAX_X'] }} step=1 value={{ int(args['frame']['width']) }} id="frame_w" aria-describedby="cframe_w">
+                                    </div>
+                                </div>
+                                <div class='form-group col-md-3'>
+                                    <label for="frame_h">Height:</label>
+                                    <div class="input-group input-group-sm">
+                                        <span class="input-group-addon" id="cframe_h">N/A</span>
+                                        <input class="form-control form-control-sm" type="number" min=0 max={{ args['ccdinfo']['CCD_MAX_Y'] }} step=1 value={{ int(args['frame']['height']) }} id="frame_h" aria-describedby="cframe_h">
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="row justify-content-left">
-                            <div class='col align-self-left'>
-                                <div class="form-inline">
-                                    <label for="x_bin">X binning (<div id="cx_bin"></div>):</label>
-                                    <input class="form-control form-control-sm" type="number" min=1 max=20 step=1 value={{ int(args['binning']['X']) }} id="x_bin">
-                                    <label for="y_bin">Y binning (<div id="cy_bin"></div>):</label>
-                                    <input class="form-control form-control-sm" type="number" min=1 max=20 step=1 value={{ int(args['binning']['Y']) }} id="y_bin">
+                            <div class="form-row">
+                                <div class='form-group col-md-3'>
+                                    <label for="x_bin">X binning:</label>
+                                    <div class="input-group input-group-sm">
+                                        <span class="input-group-addon" id="cx_bin">N/A</span>
+                                        <input class="form-control form-control-sm" type="number" min=1 max=20 step=1 value={{ int(args['binning']['X']) }} id="x_bin" aria-describedby="cx_bin">
+                                    </div>
+                                </div>
+                                <div class='form-group col-md-3'>
+                                    <label for="y_bin">Y binning:</label>
+                                    <div class="input-group input-group-sm">
+                                        <span class="input-group-addon" id="cy_bin">N/A</span>
+                                        <input class="form-control form-control-sm" type="number" min=1 max=20 step=1 value={{ int(args['binning']['Y']) }} id="y_bin" aria-describedby="cy_bin">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <div class='form-group col-md-4'>
                                     <button type="button" id="confccd" class="btn btn-primary btn-sm">Configure Readout</button>
                                 </div>
                             </div>
-                        </div>
-                        <div class="row justify-content-left">
-                            <div class='col align-self-left'>
-                                <div class="form-inline">
+                            <div class="form-row">
+                                <div class='form-group col-md-4'>
                                     <button type="button" id="confwfs" class="btn btn-primary btn-sm">Configure for WFS</button>
+                                </div>
+                                <div class='form-group col-md-4'>
                                     <button type="button" id="confdefault" class="btn btn-primary btn-sm">Default Configuration</button>
+                                </div>
+                                <div class='form-group col-md-4'>
                                     {% if args['status'] %}
                                         <button type="button" id="connect" class="btn btn-success btn-sm">Connected</button>
                                     {% else %}
@@ -101,7 +127,7 @@
                                     {% end %}
                                 </div>
                             </div>
-                        </div>
+                        </form>
                     </div>
                 </div>
             </div>
