--- a/camsrv/web_resources/templates/f9wfs.html
+++ b/camsrv/web_resources/templates/f9wfs.html
@@ -186,7 +186,7 @@
             </div>
         </div>
         <div class="row">
-            <div class='col-10'>
+            <div class='col'>
                 <div class="progress" style="height: 20px;">
                     <div id="progress" class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
                     </div>
