--- a/camsrv/web_resources/templates/f9wfs.html
+++ b/camsrv/web_resources/templates/f9wfs.html
@@ -135,15 +135,14 @@
             <div class='col align-self-left'>
                 <form class="form-inline">
                     <div class="form-group">
-                        <label class="form-check-label"><label class="custom-control custom-checkbox">
+                        <div class="custom-control custom-checkbox custom-control-inline">
                             {% if args['cooling'] == "On" %}
                                 <input id="cooling" type="checkbox" class="custom-control-input" checked>
                             {% else %}
                                 <input id="cooling" type="checkbox" class="custom-control-input">
                             {% end %}
-                            <span class="custom-control-indicator"></span>
-                            <span class="custom-control-description">Enable Cooling</span>
-                        </label>
+                            <label class="custom-control-label">Enable Cooling</label>
+                        </div>
                         <label for="settemp">Set Temp (˚C):</label>
                         <input class="form-control form-control-sm" type="number" min=-30.0 max=30.0 step=0.1 value={{ args['requested_temp'] }} id="settemp">
                         <button id="conftemp" class="btn btn-primary btn-sm">Configure Temp</button>
