fix cooling for f/9 wfs, take 2

--- a/camsrv/web_resources/templates/f9wfs.html
+++ b/camsrv/web_resources/templates/f9wfs.html
@@ -135,7 +135,7 @@
             <div class='col align-self-left'>
                 <form class="form-inline">
                     <div class="form-group">
-                        <div class="custom-control custom-checkbox custom-control-inline">
+                        <div class="custom-control custom-radio custom-control-inline">
                             {% if args['cooling'] == "On" %}
                                 <input id="cooling" type="checkbox" class="custom-control-input" checked>
                             {% else %}
