fix cooling for f/9 wfs, take 3

--- a/camsrv/web_resources/templates/f9wfs.html
+++ b/camsrv/web_resources/templates/f9wfs.html
@@ -134,7 +134,7 @@
         <div class="row justify-content-left">
             <div class='col align-self-left'>
                 <form class="form-inline">
-                    <div class="form-group">
+                    <div class="form-row form-group">
                         <div class="custom-control custom-radio custom-control-inline">
                             {% if args['cooling'] == "On" %}
                                 <input id="cooling" type="checkbox" class="custom-control-input" checked>
