--- a/camsrv/web_resources/templates/f9wfs.html
+++ b/camsrv/web_resources/templates/f9wfs.html
@@ -141,7 +141,7 @@
                             {% else %}
                                 <input id="cooling" type="checkbox" class="custom-control-input">
                             {% end %}
-                            <label class="custom-control-label">Enable Cooling</label>
+                            <label class="custom-control-label" for="cooling">Enable Cooling</label>
                         </div>
                         <label for="settemp">Set Temp (˚C):</label>
                         <input class="form-control form-control-sm" type="number" min=-30.0 max=30.0 step=0.1 value={{ args['requested_temp'] }} id="settemp">
