tweak column formatting for f9wfs

--- a/camsrv/web_resources/templates/f9wfs.html
+++ b/camsrv/web_resources/templates/f9wfs.html
@@ -132,7 +132,7 @@
                 </div>
             </div>
         <div class="row justify-content-left">
-            <div class='col align-self-left'>
+            <div class='col-md-10 align-self-left'>
                 <form class="form-inline">
                     <div class="form-row form-group">
                         <div class="custom-control custom-radio custom-control-inline">
@@ -151,7 +151,7 @@
             </div>
         </div>
         <div class="row justify-content-left">
-            <div class='col align-self-left'>
+            <div class='col-md-10 align-self-left'>
                 <div class="form-inline">
                     <label for="ctemp"><b>Camera Temp:</b></label> <div id="ctemp">N/A ˚C</div>
                     <label for="cpower"><b>Cooling Power:</b></label> <div id="cpower">N/A%</div>
@@ -159,7 +159,7 @@
             </div>
         </div>
         <div class="row justify-content-between">
-            <div class='col-10'>
+            <div class='col-md-10'>
                 <form class="form-inline">
                     <div class="form-group">
                         <label for="exptype">Exposure Type:</label>
